force-app/main/default/objects/TTR_Request_Form__c/TTR_Request_Form__c.object-meta.xml
<CustomObject>
    <description>This is the object to capture the TTR Store Notes information</description>
    <label>TTR Request Form</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TTR Request Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>