force-app/main/default/objects/TTR_Request_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the Account that the TTR Request is related to.</description>
    <inlineHelpText>Please enter the Account that the TTR Request is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TTR Request Form</relationshipLabel>
    <relationshipName>TTR_Request_Form</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>