force-app/main/default/objects/TTR_Request_Form__c/fields/Active_Form__c.field-meta.xml
<CustomField>
    <fullName>Active_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an indicator to show the most current TTR Form based on Created Date.</description>
    <inlineHelpText>This is an indicator to show the most current TTR Form based on Created Date.</inlineHelpText>
    <label>Active Form</label>
    <type>Checkbox</type>
</CustomField>