force-app/main/default/objects/TTR_Request_Form__c/fields/Additional_POP__c.field-meta.xml
<CustomField>
    <fullName>Additional_POP__c</fullName>
    <description>This the for additional point of purchase notes. Example - Large Logo, other banners, shelf types, cut-outs, etc.</description>
    <inlineHelpText>Please enter any additional POP ordered.  Example - Large Logo, other banners, shelf types, cut-outs, etc.</inlineHelpText>
    <label>Additional POP</label>
    <type>TextArea</type>
</CustomField>