force-app/main/default/objects/TTR_Request_Form__c/fields/All_footwear_signed__c.field-meta.xml
<CustomField>
    <fullName>All_footwear_signed__c</fullName>
    <description>This is to identify if all footwear has been signed.</description>
    <inlineHelpText>Please choose yes if all footwear has been signed</inlineHelpText>
    <label>*Delete* All footwear signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>