force-app/main/default/objects/TTR_Request_Form__c/fields/Are_all_footwear_styles_out_of_stock__c.field-meta.xml
<CustomField>
    <fullName>Are_all_footwear_styles_out_of_stock__c</fullName>
    <description>This field is to identify if all current footwear styles are out of the stock room and on sales floor.</description>
    <inlineHelpText>Please choose yes if all current footwear styles are out of the stock room and on sales floor.</inlineHelpText>
    <label>*Delete* Are all footwear styles out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>