force-app/main/default/objects/TTR_Request_Form__c/fields/Boot_Construction__c.field-meta.xml
<CustomField>
    <fullName>Boot_Construction__c</fullName>
    <description>This field is to identify if the store has had training on Boot Construction.</description>
    <inlineHelpText>Please choose yes if the store has had training on Boot Construction (upper, foot bed, soles, footwear styles, insulation, waterproof, RWS leather, laces).</inlineHelpText>
    <label>Boot Construction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>