force-app/main/default/objects/TTR_Request_Form__c/fields/Bulk_stacks_and_end_caps_full__c.field-meta.xml
<CustomField>
    <fullName>Bulk_stacks_and_end_caps_full__c</fullName>
    <description>This field indicates if Bulk stacks and end-caps are full, including one on display.</description>
    <inlineHelpText>Please choose yes if bulk stacks and end-caps are full, including one on display.</inlineHelpText>
    <label>* Delete* Bulk stacks and end-caps full</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>