force-app/main/default/objects/TTR_Request_Form__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stored the CAM information.</description>
    <inlineHelpText>Pleas enter the CAM information.</inlineHelpText>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TTR_Request_Form</relationshipName>
    <type>Lookup</type>
</CustomField>