force-app/main/default/objects/TTR_Request_Form__c/fields/Casual_Product__c.field-meta.xml
<CustomField>
    <fullName>Casual_Product__c</fullName>
    <description>This field is used to capture any casual product.</description>
    <inlineHelpText>Please enter any casual product information in the field.</inlineHelpText>
    <label>*Delete* Casual Product</label>
    <type>TextArea</type>
</CustomField>