force-app/main/default/objects/TTR_Request_Form__c/fields/Casual_Requested__c.field-meta.xml
<CustomField>
    <fullName>Casual_Requested__c</fullName>
    <description>This is used to caputre the casual product information.</description>
    <inlineHelpText>Please enter casual prodcut information in this field.</inlineHelpText>
    <label>*Delete* Casual Requested</label>
    <type>TextArea</type>
</CustomField>