force-app/main/default/objects/TTR_Request_Form__c/fields/Competitive_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Information__c</fullName>
    <description>Competitive Spotlight. It is for internal eyes only.</description>
    <inlineHelpText>Competitive Spotlight. For internal eyes only and is not included in automated emails.</inlineHelpText>
    <label>Competitive Spotlight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>