force-app/main/default/objects/TTR_Request_Form__c/fields/Competitor_products_not_on_I_S_shelves__c.field-meta.xml
<CustomField>
    <fullName>Competitor_products_not_on_I_S_shelves__c</fullName>
    <description>This field identifies Competitor products NOT on I/S shelves.</description>
    <inlineHelpText>Please choose yes if Competitor products are NOT on I/S shelves.</inlineHelpText>
    <label>*Delete* Competitor products not on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>