force-app/main/default/objects/TTR_Request_Form__c/fields/Dept_brand_displayed_clean_orderly__c.field-meta.xml
<CustomField>
    <fullName>Dept_brand_displayed_clean_orderly__c</fullName>
    <description>Department, brand, displayed neat, clean, orderly</description>
    <inlineHelpText>Choose yes if the department and brand are displayed neat, clean and orderly?</inlineHelpText>
    <label>*Delete* Dept brand displayed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>