force-app/main/default/objects/TTR_Request_Form__c/fields/EPT_Comments__c.field-meta.xml
<CustomField>
    <fullName>EPT_Comments__c</fullName>
    <description>This field is used for Dealer Education comments.</description>
    <inlineHelpText>Please enter any  Dealer Education discussion points.</inlineHelpText>
    <label>Dealer Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>