force-app/main/default/objects/TTR_Request_Form__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Event Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>