force-app/main/default/objects/TTR_Request_Form__c/fields/Footwear_Manager__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for the Footwear Manager.</description>
    <inlineHelpText>Please enter the Footwear Manager name in this field.</inlineHelpText>
    <label>Footwear Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TTR Request Form (Contact Supervisor)</relationshipLabel>
    <relationshipName>TTR_Request_Form1</relationshipName>
    <type>Lookup</type>
</CustomField>