force-app/main/default/objects/TTR_Request_Form__c/fields/History_of_the_Brand__c.field-meta.xml
<CustomField>
    <fullName>History_of_the_Brand__c</fullName>
    <description>This is the History of the Brand.</description>
    <inlineHelpText>Please choose yes if the store has had training on the History of the Brand.</inlineHelpText>
    <label>History of the Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>