force-app/main/default/objects/TTR_Request_Form__c/fields/Hunt_Product__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Product__c</fullName>
    <description>These are the Hunting boot product.</description>
    <inlineHelpText>Please enter the the Hunting boot product in this field.</inlineHelpText>
    <label>*Delete* Hunt Product</label>
    <type>TextArea</type>
</CustomField>