force-app/main/default/objects/TTR_Request_Form__c/fields/Hunt_Requested__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Requested__c</fullName>
    <description>This field is used to capture the hunting product information.</description>
    <inlineHelpText>Please enter the hunting product information in this field.</inlineHelpText>
    <label>*Delete* Hunt Requested</label>
    <type>TextArea</type>
</CustomField>