force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Brand_header_sign_on_display__c.field-meta.xml
<CustomField>
    <fullName>I_S_Brand_header_sign_on_display__c</fullName>
    <description>This field is to for the I/S Brand header sign on display.</description>
    <inlineHelpText>Please check this box if the  I/S Brand header sign was on display.</inlineHelpText>
    <label>I-S Brand header sign on display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>