force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Hunt_Work_banners_on_display__c.field-meta.xml
<CustomField>
    <fullName>I_S_Hunt_Work_banners_on_display__c</fullName>
    <description>Indicates if the Please select the I/S Hunt &amp; Work banners are on display.</description>
    <inlineHelpText>Please check this if the I/S Hunt &amp; Work banners are on display.</inlineHelpText>
    <label>I-S Hunt &amp; Work banners on display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>