force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Hunt_Work_Feature_Benefit_Graphic__c.field-meta.xml
<CustomField>
    <fullName>I_S_Hunt_Work_Feature_Benefit_Graphic__c</fullName>
    <description>This field it to indicate if the I/S Hunt &amp; Work Feature Benefit Graphic is on display.</description>
    <inlineHelpText>Please check this box if the I/S Hunt &amp; Work Feature Benefit Graphic is on display.</inlineHelpText>
    <label>I-S Hunt &amp; Work Feature Benefit Graphic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>