force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Hunt_Work_size_chart__c.field-meta.xml
<CustomField>
    <fullName>I_S_Hunt_Work_size_chart__c</fullName>
    <description>This field is used to identify if the store has participated on I/S Hunt &amp; Work size chart (standard size and widths).</description>
    <inlineHelpText>Please choose yes if the store has had training on I/S Hunt &amp; Work size chart (standard size and widths).</inlineHelpText>
    <label>I/S Hunt &amp; Work size chart</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>