force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Hunt_Work_slatwall_shelf_on_display__c.field-meta.xml
<CustomField>
    <fullName>I_S_Hunt_Work_slatwall_shelf_on_display__c</fullName>
    <description>This field is to indicate of the I/S Hunt &amp; Work slatwall shelf is on display.</description>
    <inlineHelpText>Please check this box if the I/S Hunt &amp; Work slatwall shelf is on display.</inlineHelpText>
    <label>I-S Hunt &amp; Work slatwall shelf on disply</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>