force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Hunt_Work_Warranties__c.field-meta.xml
<CustomField>
    <fullName>I_S_Hunt_Work_Warranties__c</fullName>
    <description>This field is used to identify if the store has participated in I/S Hunt &amp; Work Warranties.</description>
    <inlineHelpText>Please choose if the store has had training on I/S Hunt &amp; Work Warranties.</inlineHelpText>
    <label>I/S Hunt &amp; Work Warranties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>