force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Promotive_cards_distributed__c.field-meta.xml
<CustomField>
    <fullName>I_S_Promotive_cards_distributed__c</fullName>
    <description>This field is used to identify if the I/S Promotive cards have been distributed to employees.</description>
    <inlineHelpText>This choose this field if the I/S Promotive cards have been distributed to employees.</inlineHelpText>
    <label>I/S Promotive cards distributed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>