force-app/main/default/objects/TTR_Request_Form__c/fields/I_S_Work_magnetic_feature_tag_on_display__c.field-meta.xml
<CustomField>
    <fullName>I_S_Work_magnetic_feature_tag_on_display__c</fullName>
    <description>This field it to indicate if the I/S Work magnetic feature tag is on display.</description>
    <inlineHelpText>Please check this box if the I/S Work magnetic feature tag is on display.</inlineHelpText>
    <label>I-S Work magnetic feature tag on display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>