force-app/main/default/objects/TTR_Request_Form__c/fields/Immediate_Issues_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Issues_Opportunities__c</fullName>
    <description>This is the Opportunity Detail information.</description>
    <inlineHelpText>Please enter the opportunity detail in this field.</inlineHelpText>
    <label>Immediate Issues &amp; Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>