force-app/main/default/objects/TTR_Request_Form__c/fields/Irish_Setter_Hunt_Carried__c.field-meta.xml
<CustomField>
    <fullName>Irish_Setter_Hunt_Carried__c</fullName>
    <description>Irish Setter Hunt Products.</description>
    <inlineHelpText>Please select the Irish Setter Hunt products carried for the Store.</inlineHelpText>
    <label>*Delete* Irish Setter Hunt Carried</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02822 | TRAIL PHANTOM  9&quot;  600G</fullName>
            </value>
            <value>
                <fullName>02820 | GRIZZLY TRACKER  9&quot; 1000G</fullName>
            </value>
            <value>
                <fullName>04870 | RUTMASTER  17&quot; RUBBER  RT-APG</fullName>
            </value>
            <value>
                <fullName>04862 | TASKMASTER  15&quot; RUBBER  CAMO</fullName>
            </value>
            <value>
                <fullName>03858 | SHADOW TREK  GTX  CAMO  3858</fullName>
            </value>
            <value>
                <fullName>02819 | GRIZZLY TRACKER  9&quot; 400G</fullName>
            </value>
            <value>
                <fullName>02852 | TRAIL PHANTOM II  10&quot; 400G INF</fullName>
            </value>
            <value>
                <fullName>00818 | GUNFLINT  11&quot;  1000G  UDRY</fullName>
            </value>
            <value>
                <fullName>01892 | SOFT PAW  CHUKKA  BROWN  1892</fullName>
            </value>
            <value>
                <fullName>02866 | MOUNTAIN CLAW  10&quot; 800G  2866</fullName>
            </value>
            <value>
                <fullName>01820 | RIDGE TOPPER  9&quot; RT XTRA  800G</fullName>
            </value>
            <value>
                <fullName>02828 | TRAIL PHANTOM  9&quot;  UDRY</fullName>
            </value>
            <value>
                <fullName>01859 | KANGAROO CASUAL OXFORD  1859</fullName>
            </value>
            <value>
                <fullName>04872 | RUTMASTER  17&quot; RUBBER  800G</fullName>
            </value>
            <value>
                <fullName>01891 | SOFT PAW  OXFORD  BROWN  1891</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>