force-app/main/default/objects/TTR_Request_Form__c/fields/Irish_Setter_Work_Store_Requested__c.field-meta.xml
<CustomField>
    <fullName>Irish_Setter_Work_Store_Requested__c</fullName>
    <description>Irish Setter Work Products.</description>
    <inlineHelpText>Please enter the Irish Setter Work products for the store.</inlineHelpText>
    <label>*Delete* Irish Sett Work Store Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>83608 | HIKER  BROWN STEEL TOE</fullName>
            </value>
            <value>
                <fullName>83900 | PULL-ON  BROWN  ALUMINUM TOE</fullName>
            </value>
            <value>
                <fullName>83607 | HIKER  BROWN</fullName>
            </value>
            <value>
                <fullName>83803 | 8&quot; BROWN</fullName>
            </value>
            <value>
                <fullName>83604 | 6&quot; BROWN  ALUMINUM TOE</fullName>
            </value>
            <value>
                <fullName>83800 | 8&quot; BROWN  ALUMINUM TOE</fullName>
            </value>
            <value>
                <fullName>83601 | 6&quot; BROWN</fullName>
            </value>
            <value>
                <fullName>89003 | 15&quot; BLACK RUBBER</fullName>
            </value>
            <value>
                <fullName>83616 | 6&quot; GOLD  WP  INSUL  ALUM TOE</fullName>
            </value>
            <value>
                <fullName>83624 | 6&quot; BROWN</fullName>
            </value>
            <value>
                <fullName>83605 | 6&quot; BROWN</fullName>
            </value>
            <value>
                <fullName>83614 | 6&quot; BROWN  WP  ALUMINUM TOE</fullName>
            </value>
            <value>
                <fullName>83904 | PULL-ON  BROWN  ALUMINUM TOE</fullName>
            </value>
            <value>
                <fullName>83603 | 6&quot; BROWN</fullName>
            </value>
            <value>
                <fullName>83814 | 8&quot; BROWN  WP  INSUL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>