force-app/main/default/objects/TTR_Request_Form__c/fields/Merchandising_Comments__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Comments__c</fullName>
    <description>This field is for Merchandising Comments.</description>
    <inlineHelpText>Please enter your Merchandising Comments.</inlineHelpText>
    <label>*Delete* Merchandising Comments</label>
    <type>TextArea</type>
</CustomField>