force-app/main/default/objects/TTR_Request_Form__c/fields/Nbr_of_Store_Associates_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Store_Associates_in_Attendance__c</fullName>
    <description>This field is used to store comments regarding the Nbr of Store Associates  in Attendance.</description>
    <inlineHelpText>Please enter the Nbr of Store Associates  in Attendance.</inlineHelpText>
    <label>Nbr of Store Associates  in Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>