force-app/main/default/objects/TTR_Request_Form__c/fields/Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Detail__c</fullName>
    <description>Additional Comments for TAM/CAM visit</description>
    <inlineHelpText>Please enter any additional comments regarding your customer contact.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>