force-app/main/default/objects/TTR_Request_Form__c/fields/Other_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Other_Contacts__c</fullName>
    <description>Used to capture any other contacts visited with, not needed as a contact in salesforce.</description>
    <inlineHelpText>Enter any other contacts visited that are not needed to be entered into Salesforce (i.e. part-time employees)</inlineHelpText>
    <label>Other Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>