force-app/main/default/objects/TTR_Request_Form__c/fields/POP_and_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>POP_and_Additional_Comments__c</fullName>
    <description>This field is for Merchandising and Point of Purchase comments.</description>
    <inlineHelpText>Please enter your Merchandising and Point of Purchase discussion points..</inlineHelpText>
    <label>Merchandising/POP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>