force-app/main/default/objects/TTR_Request_Form__c/fields/POP_Comments__c.field-meta.xml
<CustomField>
    <fullName>POP_Comments__c</fullName>
    <description>Sell Through discussion points</description>
    <inlineHelpText>Please any sell through discussion points.</inlineHelpText>
    <label>Sell Through</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>