force-app/main/default/objects/TTR_Request_Form__c/fields/Product_adjacencies__c.field-meta.xml
<CustomField>
    <fullName>Product_adjacencies__c</fullName>
    <description>This is to identify if the product adjacency has been done correctly.</description>
    <inlineHelpText>Please check this if the product adjacency setup has been done correctly.</inlineHelpText>
    <label>Product adjacencies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>