force-app/main/default/objects/TTR_Request_Form__c/fields/Product_Carried_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Carried_Notes__c</fullName>
    <description>Notes for Inventory discussion points.</description>
    <inlineHelpText>Please enter any notes regarding inventory discussion points.</inlineHelpText>
    <label>Inventory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>